:sparkles: 상대방에게 문자 전송 기능 추